Fix layout issue in references input

--- a/desktop/src/app/components/configuration/editor/widgets/references-input.scss
+++ b/desktop/src/app/components/configuration/editor/widgets/references-input.scss
@@ -5,6 +5,15 @@ references-input {
     .reference-input {
       border-right: none;
     }
+
+    input,
+    select {
+      position: relative;
+
+      &:focus {
+        z-index: 1000;
+      }
+    }
   }
 
   .btn-danger {
